# moe-expressivity

./: .gitignore  .venv  LICENSE  README.md  addition_ffn.py  attention_analysis.ipynb  captum_demo.py  count_params.py  experiments.md  extract_laux_sweep.py  ffn_activation_analysis.py  formerlens_attn_pattern_test.py  formerlens_demo.py  main.py  paper_outline.txt  pyproject.toml  results_all_experiments.md  results_generalization.json  results_modular_addition.md  train.py  train_frozen.py  train_frozen_add7.py  train_frozen_histogram.py  train_generalization.py  train_generalization_histogram.py  train_generalization_modadd.py  train_histogram.py  train_modular_addition.py  train_with_registers.py
analysis/: README.md  activation_patching.py  analyze_activation_symmetry.py  analyze_add7.py  analyze_all_variants.py  analyze_by_carry_length.py  analyze_histogram_ablation.py  analyze_modadd_ablation.py  analyze_phase123.py  attention_analysis.ipynb  dla_add7.py  eval_generalization.py  eval_generalization_checks.py  eval_unified_routing.py  ffn_analysis.ipynb  fourier_128dim_ffn.py  fourier_ffn128.py  fourier_silu_analysis.py  glu_decomposition_figure.py  glu_gate_probes.py  glu_weight_decomposition.py  head_ablation.py  head_ablation_sorted.py  histogram_strategy_diagnostic.py  histogram_strategy_diagnostic_v2.py  histogram_strategy_diagnostic_v3.py  make_fig1_headline.py  make_matched_ablation_figures.py  make_matched_figures.py  make_matched_fourier_figure.py  per_pc_fourier.py  reviewer_analyses.py  routing_mi_silu_vs_gelu.py  silu_ablation_comparison.py  (+4 more)
(+57 files in other folders)
