[project]
name = "moe-expressivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "captum>=0.8.0",
    "circuitsvis>=1.43.2",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "transformer-lens>=2.16.1",
    "wandb>=0.23.1",
]
